--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "core-js": "^3.15.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
-    "nuxt": "^2.15.7",
+    "nuxt": "^2.10.1",
+    "@nuxt/generator": "^2.10.1",
     "videojs-record": "^4.5.0",
     "vue-media-recorder": "^0.1.25"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.7",
-    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxt/types": "2.10.1",
+    "@nuxt/typescript-build": "2.10.1",
     "@nuxtjs/moment": "^1.6.1",
-    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@nuxtjs/tailwindcss": "^4.0.0-0",
     "nuxt-vite": "^0.2.4",
     "postcss": "^8.3.5"
   }
