--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
+    "dev": "vite",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "build": "nuxt build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@codekraft-studio/vue-record": "^0.0.3",
@@ -22,8 +23,10 @@
     "@nuxt/types": "^2.15.7",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/moment": "^1.6.1",
-    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@nuxtjs/tailwindcss": "^4.2.1",
+    "autoprefixer": "^10.3.4",
     "nuxt-vite": "^0.2.4",
-    "postcss": "^8.3.5"
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.14"
   }
 }
