--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "build": "nuxt build",
+    "build": "nuxt generate",
     "serve": "vite preview"
   },
   "dependencies": {
