--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "nuxt dev",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "build": "nuxt build"
+    "build": "nuxt build",
+    "codegen": "node ./cmd/codegen.js"
   },
   "dependencies": {
     "@codekraft-studio/vue-record": "^0.0.3",
     "ant-design-vue": "^1.7.8",
+    "axios": "^0.21.4",
     "core-js": "^3.15.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "nuxt": "^2.15.7",
+    "swagger-axios-codegen": "^0.12.6",
     "videojs-record": "^4.5.0",
     "vue-media-recorder": "^0.1.25"
   },
