--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "codegen": "node ./cmd/codegen.js"
   },
   "dependencies": {
+    "@blowstack/ckeditor-nuxt": "^0.6.0",
+    "@ckeditor/ckeditor5-build-classic": "^29.2.0",
+    "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "@codekraft-studio/vue-record": "^0.0.3",
     "ant-design-vue": "^1.7.8",
     "axios": "^0.21.4",
